--- a/src/translation/es/global.json
+++ b/src/translation/es/global.json
@@ -24,14 +24,11 @@
         "title":"MIS PROYECTOS",
         "Parrafo":"Utilicé React y Chakra UI para crear una aplicación de lista de tareas. Estructuré los componentes TaskList, TaskItem y TaskForm. Diseñé con Chakra UI y CSS, añadiendo funcionalidad con JavaScript para agregar, eliminar y marcar tareas. Implementé LocalStorage para almacenar datos de manera persistente en el navegador.",
         "buttom":"VER CODIGO",
+        "buttom2":"VER DEMO",
         "API":"Utilicé Express y Node.js para crear un servidor de lista de tareas. Configuré rutas RESTful para las operaciones CRUD y utilicé Postman para probarlas. Implementé lógica para interactuar con una base de datos, MongoDB , para almacenar y recuperar datos de tareas.",
         "Portafolio":"Desarrollé mi portafolio utilizando tecnologías modernas como React para la estructura y la interactividad, Vite para una rápida compilación y desarrollo, TypeScript para una mejor detección de errores durante el desarrollo, CSS para el diseño y estilos, y EmailJS para la funcionalidad de envío de correos electrónicos desde el formulario de contacto. Esta combinación de tecnologías me permitió crear un portafolio dinámico, receptivo y funcional."
      },
      "Contact":{
         "title":"CONTACTAME"
-     },
-     "Footer":{
-      "title":"Desarrollado por Juanse Rozo"
      }
-    
 }
